--- a/ch5/rgbd/CMakeLists.txt
+++ b/ch5/rgbd/CMakeLists.txt
@@ -5,3 +5,4 @@ find_package(Pangolin REQUIRED)
 
 add_executable(joinMap joinMap.cpp)
 target_link_libraries(joinMap ${OpenCV_LIBS} ${Pangolin_LIBRARIES})
+target_link_libraries(joinMap Sophus::Sophus)
