--- a/ch10/CMakeLists.txt
+++ b/ch10/CMakeLists.txt
@@ -26,6 +26,6 @@ add_executable(pose_graph_g2o_lie pose_graph_g2o_lie_algebra.cpp)
 target_link_libraries(pose_graph_g2o_lie
         g2o_core g2o_stuff
         ${CHOLMOD_LIBRARIES}
-        ${Sophus_LIBRARIES}
+        Sophus::Sophus
         )
 
