--- a/ch12/dense_mono/CMakeLists.txt
+++ b/ch12/dense_mono/CMakeLists.txt
@@ -2,13 +2,14 @@ cmake_minimum_required(VERSION 2.8)
 project(dense_monocular)
 
 set(CMAKE_BUILD_TYPE "Release")
-set(CMAKE_CXX_FLAGS "-std=c++11 -march=native -O3")
+# set(CMAKE_CXX_FLAGS "-std=c++11 -march=native -O3")
+set(CMAKE_CXX_FLAGS "-std=c++14")
 
 ############### dependencies ######################
 # Eigen
 include_directories("/usr/include/eigen3")
 # OpenCV
-find_package(OpenCV 3.1 REQUIRED)
+find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
 # Sophus
 find_package(Sophus REQUIRED)
@@ -19,4 +20,4 @@ set(THIRD_PARTY_LIBS
         ${Sophus_LIBRARIES})
 
 add_executable(dense_mapping dense_mapping.cpp)
-target_link_libraries(dense_mapping ${THIRD_PARTY_LIBS})
+target_link_libraries(dense_mapping ${THIRD_PARTY_LIBS} Sophus::Sophus)
