--- a/ch7/CMakeLists.txt
+++ b/ch7/CMakeLists.txt
@@ -6,7 +6,7 @@ add_definitions("-DENABLE_SSE")
 set(CMAKE_CXX_FLAGS "-std=c++11 -O2 ${SSE_FLAGS} -msse4")
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
-find_package(OpenCV 3 REQUIRED)
+find_package(OpenCV REQUIRED)
 find_package(G2O REQUIRED)
 find_package(Sophus REQUIRED)
 
@@ -35,8 +35,11 @@ add_executable(pose_estimation_3d2d pose_estimation_3d2d.cpp)
 target_link_libraries(pose_estimation_3d2d
         g2o_core g2o_stuff
         ${OpenCV_LIBS})
+target_link_libraries(pose_estimation_3d2d Sophus::Sophus)
+
 
 add_executable(pose_estimation_3d3d pose_estimation_3d3d.cpp)
 target_link_libraries(pose_estimation_3d3d
         g2o_core g2o_stuff
         ${OpenCV_LIBS})
+target_link_libraries(pose_estimation_3d3d Sophus::Sophus)
